--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
   },
